# atomic

./: .crabbox.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEV_SETUP.md  README.md  bunfig.toml  install.cmd  install.ps1  install.sh  issues.md  package-lock.json  package.json  prek.toml  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.json  verdaccio.yaml
.claude/: settings.json
.github/: dependabot.yml
.opencode/: opencode.json
assets/: settings.schema.json
crates/atomic-natives/: Cargo.toml
crates/atomic-natives/src/: block.rs  fs_cache.rs  glob.rs  glob_util.rs  grep.rs  lib.rs  pty.rs  task.rs
crates/atomic-natives/src/fs_cache/: part_01.rs  part_02.rs
crates/atomic-natives/src/grep/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
docs/: ci.md  workflow-playbook.md
evals/: README.md  atomic_harbor.py  atomic_pier.py  skill_prerequisites.py  test_atomic_adapters.py
examples/: tsconfig.json
scripts/: build-binaries.sh  bump-version.ts  check-file-length.ts  cut-release.ts  generate-coding-agent-shrinkwrap.mjs  lint-custom-workflows.ts  lint-offload-await.test.ts  lint-offload-await.ts  verify-publish-context.ts
specs/: 2026-01-18-atomic-cli-implementation.md  2026-01-19-cli-auto-init-agent.md  2026-01-19-readme-update-spec.md  2026-01-20-cli-agent-rename.md  2026-01-20-cross-platform-support.md  2026-01-20-force-flag-modification.md  2026-01-20-init-config-merge-behavior.md  2026-01-21-anonymous-telemetry-implementation.md  2026-01-21-binary-distribution-installers.md  2026-01-21-update-uninstall-commands.md  2026-01-22-phase-6-telemetry-upload-backend.md  2026-01-24-copilot-agent-detection-refactoring.md  2026-01-25-commander-js-migration.md  2026-01-25-ralph-setup-refactor.md  2026-01-31-sdk-migration-and-graph-execution.md  2026-02-02-atomic-builtin-workflows-commands.md  2026-02-09-custom-tools-directory.md  2026-02-09-mcp-support-and-discovery.md  2026-04-10-tmux-ux-improvements.md  (+25 more)
(+638 files in other folders)
