[package]
name = "atomic-natives"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes.workspace = true
h2.workspace = true
http.workspace = true
napi.workspace = true
napi-derive.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
url.workspace = true
webpki-roots.workspace = true

[build-dependencies]
napi-build.workspace = true
